@@ -5,12 +5,6 @@ author = Kent Fredric <kentnl@cpan.org>
 license = Perl_5
 copyright_holder = Kent Fredric <kentnl@cpan.org>
 
-[Git::NextVersion::Sanitized / @Author::KENTNL/Git::NextVersion::Sanitized]
-first_version = 0.001000
-mantissa = 8
-normal_form = numify
-version_regexp = ^(.*)-source$
-
 [MetaConfig / @Author::KENTNL/MetaConfig]
 
 [GithubMeta / @Author::KENTNL/GithubMeta]
@@ -69,7 +63,9 @@ trailing_whitespace = 1
 
 [ManifestSkip / @Author::KENTNL/ManifestSkip]
 
-[PkgVersion / @Author::KENTNL/PkgVersion]
+[RewriteVersion::Sanitized / @Author::KENTNL/RewriteVersion::Sanitized]
+mantissa = 6
+normal_form = numify
 
 [PodWeaver / @Author::KENTNL/PodWeaver]
 replacer = replace_with_blank
@@ -127,6 +123,8 @@ tag_format = %v-source
 format = %v %{yyyy-MM-dd'T'HH:mm:ss}dZ %h
 time_zone = UTC
 
+[BumpVersionAfterRelease / @Author::KENTNL/BumpVersionAfterRelease]
+
 [Git::Commit / @Author::KENTNL/commit_release_changes]
 allow_dirty_match = ^lib/
 
@@ -160,6 +158,7 @@ modules = Dist::Zilla::App::Command::bakeini
 Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes = 0.001001
 Dist::Zilla::Plugin::Authority = 1.006
 Dist::Zilla::Plugin::AutoPrereqs = 0
+Dist::Zilla::Plugin::BumpVersionAfterRelease = 0
 Dist::Zilla::Plugin::ConfirmRelease = 0
 Dist::Zilla::Plugin::CopyFilesFromBuild = 0
 Dist::Zilla::Plugin::EOLTests = 0
@@ -169,7 +168,6 @@ Dist::Zilla::Plugin::Git::CommitBuild = 0
 Dist::Zilla::Plugin::Git::Contributors = 0.006
 Dist::Zilla::Plugin::Git::GatherDir = 0
 Dist::Zilla::Plugin::Git::NextRelease = 0.004000
-Dist::Zilla::Plugin::Git::NextVersion::Sanitized = 0
 Dist::Zilla::Plugin::Git::Tag = 0
 Dist::Zilla::Plugin::GithubMeta = 0
 Dist::Zilla::Plugin::License = 0
@@ -183,7 +181,6 @@ Dist::Zilla::Plugin::MetaProvides::Package = 1.14000001
 Dist::Zilla::Plugin::MetaTests = 0
 Dist::Zilla::Plugin::MetaYAML = 0
 Dist::Zilla::Plugin::MinimumPerl = 0
-Dist::Zilla::Plugin::PkgVersion = 0
 Dist::Zilla::Plugin::PodCoverageTests = 0
 Dist::Zilla::Plugin::PodSyntaxTests = 0
 Dist::Zilla::Plugin::PodWeaver = 0
@@ -192,6 +189,7 @@ Dist::Zilla::Plugin::Prereqs::AuthorDeps = 0
 Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled = 0
 Dist::Zilla::Plugin::ReadmeAnyFromPod = 0
 Dist::Zilla::Plugin::ReadmeFromPod = 0
+Dist::Zilla::Plugin::RewriteVersion::Sanitized = 0
 Dist::Zilla::Plugin::RunExtraTests = 0
 Dist::Zilla::Plugin::Test::CPAN::Changes = 0
 Dist::Zilla::Plugin::Test::Compile::PerFile = 0
