@@ -3,7 +3,11 @@ use warnings;
 
 package Data::Handle;
 
+our $VERSION = '1.000000';
+
 # ABSTRACT: A Very simple interface to the __DATA__  file handle.
+
+# AUTHORITY
 
 =head1 SYNOPSIS
 
