@@ -4,8 +4,11 @@ use warnings;
 
 package Data::Handle::IO;
 
+our $VERSION = '1.000000';
+
 # ABSTRACT: A Tie Package so Data::Handle can look and feel like a normal handle.
-#
+
+# AUTHORITY
 
 =head1 DESCRIPTION
 
